// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionBar /> should render a separator 1`] = `
<span
  className="separator"
/>
`;

exports[`<ActionBar /> should render with default alignment 1`] = `
<div
  className="actionBar"
>
  <button>
    One
  </button>
  <button>
    Two
  </button>
  <button>
    Three
  </button>
</div>
`;

exports[`<ActionBar /> should render with right alignment 1`] = `
<div
  className="actionBar alignRight"
>
  <button>
    One
  </button>
  <button>
    Two
  </button>
  <button>
    Three
  </button>
</div>
`;

exports[`<ActionBar /> should render with separator 1`] = `
<div
  className="actionBar"
>
  <button>
    One
  </button>
  <Component />
  <button>
    Two
  </button>
</div>
`;
